--- a/airbnb_clone/src/components/Contacts.css
+++ b/airbnb_clone/src/components/Contacts.css
@@ -40,6 +40,9 @@ body {
 .contact-card > h3 {
     font-weight: 700;
     font-size: 18px;
+    color: #2B283A;
+    text-align: left;
+
 }
 
 .info-group {
